--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,60 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display:block ;
+    text-align:center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
-
-
+#ejercicioDos{
+  display: none;
+}
 /* Ejercicio 3: */
 
 /* Acá va tu código */
+#ejercicioTres{
+    position: absolute;
+    top:100px;
+    left:200px;
 
-
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
 
+#ejercicioCuatro{
+position:fixed ;
+top:0px;
+right: 0px;
+}
 
-
-/* Ejercicio 5: */
+/* Ejercicio 5: 
 
 /* Acá va tu código */
+#ejercicioCinco{
+display:flex;
+align-items: center;
+justify-content: space-around;
+flex-direction: row-reverse;
+/*flex-direction:column;
+(con este comando la pongo en orden vertical)
+*/
+
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioSiete{
+
+   /* align-items: flex-end;*/
+   /*flex-direction:row-reverse ;*/
+   /*flex-direction: column*/
+   /*flex-direction:column-reverse*/
+   /*align-items: center;*/
+   /*flex-flow: column wrap;*/
+}
